<resources>
    <string name="app_name">克鲁赛德战记wiki</string>
    <string name="main_title">克鲁赛德战记wiki</string>

    <string name="hero_list_title">勇士图鉴</string>
    <string name="equipment_list_title">装备图鉴</string>
    <string name="skill_list_title">技能图鉴</string>
    <string name="StotyMode_list_title">剧情相关</string>
    <string name="ChallengeMode_list_title">挑战相关</string>
    <string name="other_list_title">其他资料</string>
    <string name="setting_list_title">设置相关</string>

    <string name="menu_search_title">请输入关键词进行搜索</string>
    <string name="menu_search"></string>
    <string name="menu_setting"></string>


    <string name="season2StotyModeTitle">S2剧情模式攻略</string>
    <string name="season2ChallengeModeTitle">挑战模式攻略</string>
    <string name="season2StoryModeName">影子与少女</string>
    <string name="season2ChallengeModeName">树星的幕后</string>
    <string name="season2StoryModeUrl">http://wiki.joyme.com/cq/影子与少女</string>
    <string name="season2ChallengeModeUrl">http://wiki.joyme.com/cq/树星的幕后</string>

    <string name="StotyMode_chapterN1_title">第一章 使徒的复活</string>
    <string name="StotyMode_chapterN2_title">第二章 使徒的复活</string>
    <string name="StotyMode_chapterN3_title">第三章 使徒的复活</string>
    <string name="StotyMode_chapterN4_title">第四章 使徒的复活</string>
    <string name="StotyMode_chapterN5_title">第五章 北风的记忆</string>
    <string name="StotyMode_chapterH5_title">第五章 北风的记忆(困难)</string>
    <string name="StotyMode_chapterN6_title">第六章 帝国的军团</string>
    <string name="StotyMode_chapterH6_title">第六章 帝国的军团(困难)</string>
    <string name="StotyMode_chapterN7_title">第七章 光之继承者</string>
    <string name="StotyMode_chapterH7_title">第七章 光之继承者(困难)</string>
    <string name="StotyMode_chapterN8_title">第八章 影子与少女</string>
    
    <string name="hero_info_title_default">勇士</string>

    <string name="warrior">剑士</string>
    <string name="paladin">骑士</string>
    <string name="archer">弓手</string>
    <string name="hunter">猎人</string>
    <string name="wizard">法师</string>
    <string name="priest">祭司</string>

    <string name="equipmentPicString">图片</string>
    <string name="equipmentNameString">名称</string>
    <string name="equipmentRateString">星级</string>
    <string name="equipmentAttackString">攻击</string>
    <string name="equipmentASPDString">攻速</string>
    <string name="equipmentForWhoString">所属</string>

    <string name="skillNameString">技能</string>
    <string name="skillTypeString">技能类型</string>
    <string name="skillMaxLvString">Lv MAX效果</string>

    <string name="settingListUpgradeTitle">在线升级</string>
    <string name="settingListAboutTitle">关于我们</string>

    <string name="otherListGoddessTitle">女神</string>
    <string name="otherListLordsTitle">领主</string>
    <string name="otherListRuneAndWeaponImprintTitle">符文与武器刻印</string>
    <string name="otherListUpdateBulletinTitle">最新游戏更新公告</string>

    <string name="heroHtmlContentSelectorString">div.row.hero-info</string>
    <string name="equimentHtmlContentSelectorString">div.hero-info-block.hero-info-block-frame.hero-sbw</string>
    <string name="skillHtmlContentSelectorString">div.skill_info</string>
    <string name="StotyModeChapterN1HtmlContentSelectorString">div.chapter1</string>
    <string name="StotyModeChapterN2HtmlContentSelectorString">div.chapter2</string>
    <string name="StotyModeChapterN3HtmlContentSelectorString">div.chapter3</string>
    <string name="StotyModeChapterN4HtmlContentSelectorString">div.chapter4</string>
    <string name="StotyModeChapterN5HtmlContentSelectorString">div.chapter5</string>
    <string name="StotyModeChapterH5HtmlContentSelectorString">div.mw-content-ltr</string>
    <string name="StotyModeChapterN6HtmlContentSelectorString">div.chapter6</string>
    <string name="StotyModeChapterH6HtmlContentSelectorString">div.chapter6</string>
    <string name="StotyModeChapterN7HtmlContentSelectorString">div.chapter7</string>
    <string name="StotyModeChapterH7HtmlContentSelectorString">div.chapter7</string>
    <string name="StotyModeChapterN8HtmlContentSelectorString">div.mw-content-ltr</string>
    <string name="season2StoryModeHtmlContentSelectorString">div.mw-content-ltr</string>
    <string name="season2ChallengeModeHtmlContentSelectorString">div.mw-content-ltr</string>

    <string name="RuneAndWeaponImprintHtmlContentSelectorString">div.mw-content-ltr</string>
    <string name="GoddessHtmlContentSelectorString">div.hero-list</string>
    <string name="LordsHtmlContentSelectorString">div.hero-list</string>

    <string name="StotyModeChapterN1T4HtmlContentEndString">使徒的复活</string>
    <string name="StotyModeChapterN5HtmlContentEndString">北风的记忆</string>
    <string name="StotyModeChapterH5HtmlContentEndString">北风的记忆困难</string>
    <string name="StotyModeChapterN6HtmlContentEndString">帝国的军团</string>
    <string name="StotyModeChapterH6HtmlContentEndString">帝国的军团困难</string>
    <string name="StotyModeChapterN7HtmlContentEndString">光之继承者</string>
    <string name="StotyModeChapterH7HtmlContentEndString">光之继承者困难</string>
    <string name="StotyModeChapterN8HtmlContentEndString">影子与少女</string>

    <string name="declaractionContent">数据基本来自着迷网克鲁赛德WIKI专区(已获授权)\n希望更多的有识之士能够为WIKI做出贡献</string>
    <string name="aboutContent">\t克鲁赛德战记wiki是一时兴起想制作出来帮助更多热爱CQ的玩家在移动端更加方便查阅攻略而制作的，在此声明：\n\t1，本人不会以此APP本身盈利，本APP完全免费且不会加入任何对本人产生盈利的广告。\n\t2，本APP全部数据为着迷网wiki克鲁塞德专区摘录而来，wiki方已经知晓且授权，如有机会也期待更深入的合作。\n\t3，本APP中插图及图标均为网上共享资源或是游戏内资源，如有作者或相关人士认为此举冒犯了权益，请通知我替换素材。\n\n\t我的贴吧ID及QQID：曜战\n\n\t我的QQ号为：504505485\n\n\t仅以本APP献给爱CQ的你！</string>

    <string name="temporaryUrl">http://wiki.woxihuan.com/cq/</string>
    <string name="trueUrl">http://wiki.joyme.com/cq/</string>
</resources>
