<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/Theme.AppCompat.Light"
            android:background="@color/main_actionbar">
            <ImageView
                android:id="@+id/skilllist_back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/ic_back_black_36dp"/>
            <TextView
                android:id="@+id/skilllist_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textColor="@color/titleColor" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="5dp"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="6dp">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/skillNameString"
                    android:textColor="#000000"/>
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/skillTypeString"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="10dp"
                android:text="@string/skillMaxLvString"
                android:textColor="#000000"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/skilllist_list_rec"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>